--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/swagger": "3.0.2",
+    "@nestjs/typeorm": "6.1.2",
     "jsonwebtoken": "8.5.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
-    "swagger-ui-express": "4.0.5"
+    "sqlite3": "4.0.8",
+    "swagger-ui-express": "4.0.5",
+    "typeorm": "0.2.18"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
