--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-socket.io": "6.3.1",
     "@nestjs/swagger": "3.0.2",
     "@nestjs/typeorm": "6.1.2",
+    "@nestjs/websockets": "6.3.1",
     "jsonwebtoken": "8.5.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
@@ -39,6 +41,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "@types/socket.io": "2.1.2",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
     "jest": "^23.6.0",
